arch: arm64: configs: Disable unused security functions
Change-Id: I88702d08ecb8067263bf69bfb8251889302e7ac7

--- a/arch/arm64/configs/exynos7885-gta3xlwifi_defconfig
+++ b/arch/arm64/configs/exynos7885-gta3xlwifi_defconfig
@@ -76,9 +76,6 @@ CONFIG_SETEND_EMULATION=y
 CONFIG_ARM64_PAN=y
 CONFIG_RANDOMIZE_BASE=y
 # CONFIG_EFI is not set
-CONFIG_TIMA=y
-CONFIG_TIMA_LKMAUTH=y
-CONFIG_TIMA_LKM_BLOCK=y
 CONFIG_UH_RKP=y
 CONFIG_RKP_KDP=y
 CONFIG_RKP_NS_PROT=y
@@ -560,7 +557,6 @@ CONFIG_CP_PMUCAL=y
 CONFIG_CMUCAL_DEBUG=y
 CONFIG_CMUCAL_QCH_IGNORE_SUPPORT=y
 CONFIG_USI=y
-CONFIG_EXYNOS_KERNEL_PROTECTION=y
 CONFIG_EXYNOS_ACPM=y
 CONFIG_EXYNOS_DVFS_MANAGER=y
 CONFIG_PM_DEVFREQ=y
@@ -660,9 +656,7 @@ CONFIG_HARDENED_USERCOPY=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_MST_LDO=y
-CONFIG_TZ_ICCC=y
-CONFIG_SECURITY_DEFEX=y
-CONFIG_SECURITY_DSMS=y
+# CONFIG_INTEGRITY is not set
 CONFIG_GAF=y
 CONFIG_GAF_V6=y
 CONFIG_CRYPTO_GCM=y
