--- a/arch/arm64/configs/exynos7885-gta3xl_defconfig
+++ b/arch/arm64/configs/exynos7885-gta3xl_defconfig
@@ -228,6 +228,7 @@ CONFIG_NET_CLS_ACT=y
 CONFIG_NET_ACT_POLICE=y
 CONFIG_NET_ACT_GACT=y
 CONFIG_NET_ACT_MIRRED=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_CFG80211=y
 CONFIG_CFG80211_WEXT=y
 CONFIG_CFG80211_REG_NOT_UPDATED=y
