--- a/arch/arm64/boot/dts/Makefile
+++ b/arch/arm64/boot/dts/Makefile
@@ -1,5 +1,7 @@
 # SPDX-License-Identifier: GPL-2.0
 dtb-y += exynos/dtbo/exynos7885.dtb
+dtbo-y += exynos/dtbo/exynos7904-gta3xl_eur_open_03.dtbo
+dtbo-y += exynos/dtbo/exynos7904-gta3xl_eur_open_04.dtbo
 dtbo-y += exynos/dtbo/exynos7904-gta3xlwifi_eur_open_03.dtbo
 dtbo-y += exynos/dtbo/exynos7904-gta3xlwifi_eur_open_04.dtbo
 
