--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -402,7 +402,7 @@ config CC_STACKPROTECTOR_REGULAR
 	  by about 0.3%.
 
 config CC_STACKPROTECTOR_STRONG
-	bool
+	bool "Strong"
 	select CC_STACKPROTECTOR
 	help
 	  Functions will have the stack-protector canary logic added in any
