arch: arm64: configs: Sync defconfigs with stock rom
* gta3xl: gta3xlxx-user 11 RP1A.200720.012 T515XXU8CVG2 release-keys
* gta3xlwifi: gta3xlwifixx-user 11 RP1A.200720.012 T510XXU5CVG2 release-keys

Change-Id: Ic57e8898f43d986b05c08998656fd12e7d735d4d

--- a/arch/arm64/configs/exynos7885-gta3xl_defconfig
+++ b/arch/arm64/configs/exynos7885-gta3xl_defconfig
@@ -162,6 +162,7 @@ CONFIG_NETFILTER_XT_TARGET_TPROXY=y
 CONFIG_NETFILTER_XT_TARGET_TRACE=y
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
+CONFIG_NETFILTER_XT_MATCH_BPF=y
 CONFIG_NETFILTER_XT_MATCH_COMMENT=y
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=y
 CONFIG_NETFILTER_XT_MATCH_CONNLABEL=y
@@ -527,6 +528,7 @@ CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SAMSUNG_FREECESS=y
+CONFIG_LMK_SKIP_KILL=y
 CONFIG_ION=y
 CONFIG_ION_EXYNOS=y
 CONFIG_HPA_EXTRA=y
