--- a/arch/arm64/configs/exynos7885-gta3xlwifi_defconfig
+++ b/arch/arm64/configs/exynos7885-gta3xlwifi_defconfig
@@ -659,9 +659,10 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
 CONFIG_MST_LDO=y
 CONFIG_TZ_ICCC=y
+CONFIG_FIVE=y
 CONFIG_SECURITY_DEFEX=y
 CONFIG_SECURITY_DSMS=y
-CONFIG_GAF=y
+CONFIG_PROCA=y
 CONFIG_GAF_V6=y
 CONFIG_CRYPTO_GCM=y
 CONFIG_CRYPTO_SHA512=y
@@ -670,6 +671,5 @@ CONFIG_CRYPTO_ZSTD=y
 CONFIG_EXYNOS_SMU=y
 CONFIG_EXYNOS_FMP=y
 CONFIG_ARM64_CRYPTO=y
-CONFIG_CRYPTO_SHA1_ARM64_CE=y
 CONFIG_CRYPTO_SHA2_ARM64_CE=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
