arch: arm64: configs: Built-in modules
Change-Id: I0c5460498856629301ea54f878c614d80f47747b

--- a/arch/arm64/configs/exynos7885-gta3xl_defconfig
+++ b/arch/arm64/configs/exynos7885-gta3xl_defconfig
@@ -378,6 +378,7 @@ CONFIG_RADIO_S610=y
 CONFIG_MALI_TMIX=y
 CONFIG_MALI_MIDGARD=y
 CONFIG_EXYNOS_SOC_NAME="7885"
+CONFIG_MALI_KUTF=y
 CONFIG_FB=y
 CONFIG_FB_SIMPLE=y
 CONFIG_EXYNOS_VIDEO=y
@@ -610,6 +611,7 @@ CONFIG_SENSORS_SX9330=y
 CONFIG_SENSORS_SX9330_WIFI=y
 CONFIG_SENSORS_SX9360=y
 CONFIG_SENSORS_SX9360_WIFI=y
+CONFIG_GATOR=y
 CONFIG_EXT2_FS=y
 CONFIG_EXT2_FS_XATTR=y
 CONFIG_EXT2_FS_SECURITY=y
